--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                             <option>Rendição QRF</option>
                             <option>Atendimento solicitado</option>
                             <option>Manutenção Moto</option>
+                            <option>Alteração no Local</option>
                         </select>
                     </td>
                     <td>
