--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                             <option>Selecione</option>
                             
                             <option>Ronda</option>
-                            <option>Ronda interna</option>
-                            <option>Entrga de Equipamentos</option>
+                            <option>Ronda Interna</option>
+                            <option>Entrega de Equipamentos</option>
                             <option>Disparo Falso</option>
                             <option>Provocado pelo Cliente</option>
                             <option>Pânico</option>
                             <option>PB</option>
                             <option>QAP</option>
                             <option>Rendição QRF</option>
-                            <option>Atendimento solicitado</option>
+                            <option>Atendimento Solicitado</option>
                             <option>Manutenção Moto</option>
                             <option>Alteração no Local</option>
                         </select>
