--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <table id="rondas_tabela" >
             <tbody id="in">
-                <tr class="minha_classe" style="background-image: url('imgStv.png'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                <tr class="minha_classe">
                     <td>
                         <label for="cliente">Cliente</label>
                         <input type="text" class="cliente" id="cliente" style="text-transform: uppercase;">
