--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <label for="nome">Nome:</label>
             <input type="text" id="nome" style="text-transform: uppercase;">
             <label for="matricula">&nbsp;&nbsp;Matrícula:</label>
-            <input type="text" id="matricula">
+            <input type="text" id="matricula" inputmode="numeric">
+
         </div>
         <div class="field-group">
             <label for="data">Data:</label>
