--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                             <option>Ronda</option>
                             <option>Ronda Interna</option>
                             <option>Entrega de Equipamentos</option>
-                            <option>Disparo Falso</option>
-                            <option>Provocado pelo Cliente</option>
+                            <option>Alarme</option>
+                            <option>Atendimento Solicitado</option>
                             <option>Pânico</option>
                             <option>PB</option>
                             <option>QAP</option>
                             <option>Rendição QRF</option>
-                            <option>Atendimento Solicitado</option>
+                            <option>Trocar de Moto</option>
                             <option>Manutenção Moto</option>
                             <option>Alteração no Local</option>
                         </select>
